--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                           <button class="flex items-center bg-blue-500 hover:bg-blue-700 text-white font-bold py-1 px-4 rounded">
                             <i class="fas fa-edit mr-2"></i><span>Edit</span>
                         </button>
-                        <button class="flex items-center bg-red-500 hover:bg-red-700 text-white font-bold py-1 px-4 rounded">
+                        <button class="flex items-center bg-[#D97706] hover:bg-red-700 text-white font-bold py-1 px-4 rounded">
                             <i class="fas fa-trash-alt mr-2"></i><span>Delete</span>
                         </button>
                     </tr>
@@ -203,7 +203,7 @@
                           <button class="flex items-center bg-blue-500 hover:bg-blue-700 text-white font-bold py-1 px-4 rounded">
                             <i class="fas fa-edit mr-2"></i><span>Edit</span>
                         </button>
-                        <button class="flex items-center bg-red-500 hover:bg-red-700 text-white font-bold py-1 px-4 rounded">
+                        <button class="flex items-center bg-[#D97706] hover:bg-red-700 text-white font-bold py-1 px-4 rounded">
                             <i class="fas fa-trash-alt mr-2"></i><span>Delete</span>
                         </button>
                         </td>
@@ -216,7 +216,7 @@
                           <button class="flex items-center bg-blue-500 hover:bg-blue-700 text-white font-bold py-1 px-4 rounded">
                             <i class="fas fa-edit mr-2"></i><span>Edit</span>
                         </button>
-                        <button class="flex items-center bg-red-500 hover:bg-red-700 text-white font-bold py-1 px-4 rounded">
+                        <button class="flex items-center bg-[#D97706] hover:bg-red-700 text-white font-bold py-1 px-4 rounded">
                             <i class="fas fa-trash-alt mr-2"></i><span>Delete</span>
                         </button>
                         </td>
@@ -229,7 +229,7 @@
                           <button class="flex items-center bg-blue-500 hover:bg-blue-700 text-white font-bold py-1 px-4 rounded">
                             <i class="fas fa-edit mr-2"></i><span>Edit</span>
                         </button>
-                        <button class="flex items-center bg-red-500 hover:bg-red-700 text-white font-bold py-1 px-4 rounded">
+                        <button class="flex items-center bg-[#D97706] hover:bg-red-700 text-white font-bold py-1 px-4 rounded">
                             <i class="fas fa-trash-alt mr-2"></i><span>Delete</span>
                         </button>
                         </td>
@@ -242,7 +242,7 @@
                           <button class="flex items-center bg-blue-500 hover:bg-blue-700 text-white font-bold py-1 px-4 rounded">
                             <i class="fas fa-edit mr-2"></i><span>Edit</span>
                         </button>
-                        <button class="flex items-center bg-red-500 hover:bg-red-700 text-white font-bold py-1 px-4 rounded">
+                        <button class="flex items-center bg-[#D97706] hover:bg-red-700 text-white font-bold py-1 px-4 rounded">
                             <i class="fas fa-trash-alt mr-2"></i><span>Delete</span>
                         </button>
                         </td>
@@ -255,7 +255,7 @@
                           <button class="flex items-center bg-blue-500 hover:bg-blue-700 text-white font-bold py-1 px-4 rounded">
                             <i class="fas fa-edit mr-2"></i><span>Edit</span>
                         </button>
-                        <button class="flex items-center bg-red-500 hover:bg-red-700 text-white font-bold py-1 px-4 rounded">
+                        <button class="flex items-center bg-[#D97706] hover:bg-red-700 text-white font-bold py-1 px-4 rounded">
                             <i class="fas fa-trash-alt mr-2"></i><span>Delete</span>
                         </button>
                         </td>
@@ -268,7 +268,7 @@
                           <button class="flex items-center bg-blue-500 hover:bg-blue-700 text-white font-bold py-1 px-4 rounded">
                             <i class="fas fa-edit mr-2"></i><span>Edit</span>
                         </button>
-                        <button class="flex items-center bg-red-500 hover:bg-red-700 text-white font-bold py-1 px-4 rounded">
+                        <button class="flex items-center bg-[#D97706] hover:bg-red-700 text-white font-bold py-1 px-4 rounded">
                             <i class="fas fa-trash-alt mr-2"></i><span>Delete</span>
                         </button>
                         </td>
@@ -281,7 +281,7 @@
                           <button class="flex items-center bg-blue-500 hover:bg-blue-700 text-white font-bold py-1 px-4 rounded">
                             <i class="fas fa-edit mr-2"></i><span>Edit</span>
                         </button>
-                        <button class="flex items-center bg-red-500 hover:bg-red-700 text-white font-bold py-1 px-4 rounded">
+                        <button class="flex items-center bg-[#D97706] hover:bg-red-700 text-white font-bold py-1 px-4 rounded">
                             <i class="fas fa-trash-alt mr-2"></i><span>Delete</span>
                         </button>
                         </td>
@@ -294,7 +294,7 @@
                           <button class="flex items-center bg-blue-500 hover:bg-blue-700 text-white font-bold py-1 px-4 rounded">
                             <i class="fas fa-edit mr-2"></i><span>Edit</span>
                         </button>
-                        <button class="flex items-center bg-red-500 hover:bg-red-700 text-white font-bold py-1 px-4 rounded">
+                        <button class="flex items-center bg-[#D97706] hover:bg-red-700 text-white font-bold py-1 px-4 rounded">
                             <i class="fas fa-trash-alt mr-2"></i><span>Delete</span>
                         </button>
                         </td>
