--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
         <h1 class="text-2xl font-bold mb-4">Form title</h1>
         <p class="text-gray-600 mb-6">Sed tortor, sed velit ridiculus ipsum pharetra lacus odio gravida augue enim.</p>
         <div class="flex mb-4">
-            <button class="flex items-center px-4 py-2 bg-[#FDE68A] rounded border border border-[#D97706]">
+            <button class="flex items-center px-4 py-2 bg-[#FDE68A] rounded border-[#D97706]">
                 <img src="https://upload.wikimedia.org/wikipedia/en/archive/a/ae/20190917170935%21Flag_of_the_United_Kingdom.svg" alt="English" class="w-6 h-4 mr-2">
                 English
             </button>
